# mhws-tex-decompressor

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: nix-flake-build.yml  release.yml
assets/: MHWs_STM_Release.list.zst
src/: app.rs  chunk.rs  component.rs  main.rs  metadata.rs  updater.rs  util.rs
src/component/: progress_bar.rs  select.rs  spin.rs  update_check.rs
