[package]
name = "mhws-tex-decompressor"
version = "0.3.0"
edition = "2024"

[dependencies]
# # local development
# re-tex = { path = "../re-tex" }
# ree-pak-core = { path = "../../ree-pak-rs/ree-pak-core" }

re-tex = { git = "https://github.com/eigeen/re-tex.git", rev = "64f85bc" }
ree-pak-core = { git = "https://github.com/eigeen/ree-pak-rs.git", rev = "f1052e9" }

# UI
dialoguer = "0.12"
indicatif = "0.18"
colored = "3.0"

color-eyre = "0.6"
rayon = "1.11"
parking_lot = "0.12"
fs-err = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = [
    "parking_lot",
    "rt-multi-thread",
    "macros",
] }
iocraft = "0.7"
reqwest = { version = "0.12", features = ["json"] }
semver = "1.0"
self-replace = "1.5"
tempfile = "3.23"
zip = { version = "5.1", default-features = false, features = ["deflate"] }
